# res-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  design.md
example/: CMakeLists.txt  design.md  example.cpp
include/res-cpp/: config.h  exceptions.hpp  formatted_error.h  formatted_error.hpp  reference_wrapper.hpp  res-cpp.h  res-cpp.hpp  result.h  result.hpp  result_base.h  result_base.hpp  result_error.h  result_error.hpp  result_error_base.h  result_error_base.hpp  result_holder.hpp  result_storage.h  result_storage.hpp  tags.h  tags.hpp  try.h  try.hpp  type_traits.h  type_traits.hpp
tests/: CMakeLists.txt  common.hpp  event_listener_registration.cpp  hold.cpp  normal.cpp  result.cpp  test.cpp  tracking_reset_listener.hpp  tracking_struct.hpp  try.cpp
